--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,16 +1,23 @@
-style = default
-
-maxColumn = 100
-
-align = most
-
-continuationIndent.defnSite = 4
-
+maxColumn = 120
+continuationIndent.defnSite = 2
+assumeStandardLibraryStripMargin = true
 danglingParentheses = true
+rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
+docstrings = JavaDoc
 
-rewrite.rules = [
-  redundantParens
-  asciiSortImports
-  prefercurlyfors
-  sortModifiers
-]
+//style = default
+//
+//maxColumn = 100
+//
+//align = most
+//
+//continuationIndent.defnSite = 4
+//
+//danglingParentheses = true
+//
+//rewrite.rules = [
+//  redundantParens
+//  asciiSortImports
+//  prefercurlyfors
+//  sortModifiers
+//]
