--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,23 +1,9 @@
+version = "2.0.0-RC4"
+style = default
 maxColumn = 120
 continuationIndent.defnSite = 2
 assumeStandardLibraryStripMargin = true
 danglingParentheses = true
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 docstrings = JavaDoc
-
-//style = default
-//
-//maxColumn = 100
-//
-//align = most
-//
-//continuationIndent.defnSite = 4
-//
-//danglingParentheses = true
-//
-//rewrite.rules = [
-//  redundantParens
-//  asciiSortImports
-//  prefercurlyfors
-//  sortModifiers
-//]
+align = most
