Small refactor after review

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,33 @@
+# Copied from https://github.com/functional-streams-for-scala/fs2/blob/series/1.0/.scalafmt.conf
+
 version = "2.0.0-RC4"
+
 style = default
-maxColumn = 120
-continuationIndent.defnSite = 2
-assumeStandardLibraryStripMargin = true
-danglingParentheses = true
-rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
-docstrings = JavaDoc
-align = most
+
+maxColumn = 100
+
+rewrite.rules = [
+  AvoidInfix
+  RedundantBraces
+  RedundantParens
+  AsciiSortImports
+  PreferCurlyFors
+]
+
+rewrite.neverInfix.excludeFilters = [until
+  to
+  by
+  eq
+  ne
+  "should.*"
+  "contain.*"
+  "must.*"
+  in
+  be
+  taggedAs
+  thrownBy
+  synchronized
+  have
+  when
+  size
+theSameElementsAs]
